# uri

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md  appveyor.yml  conanfile.py
cmake/: build_dependencies.cmake
cmake/dependencies/: boost.cmake  include_all.cmake
conan/: build.py
conan/test_package/: conanfile.py  example.cpp
include/uri/: algorithm.hpp  basic_builder.hpp  basic_parser.hpp  basic_uri.hpp  error.hpp  io.hpp  ios.hpp  key_value_query.hpp  traits.hpp  uri.hpp
include/uri/detail/: tags.hpp
include/uri/fusion/: adapted_basic_uri.hpp  basic_uri.hpp
include/uri/old/schemes/: http.hpp  mailto.hpp
include/uri/parsers/grammars/: grammar.hpp
include/uri/parsers/grammars/uri/: grammar.hpp
include/uri/parsers/rules/: character.hpp  fragment.hpp  host.hpp  ip.hpp  path.hpp  port.hpp  query.hpp  scheme.hpp  userinfo.hpp
include/uri/parsers/rules/http/: query.hpp
include/uri/parsers/rules/uri/: character.hpp  fragment.hpp  host.hpp  ip.hpp  path.hpp  port.hpp  query.hpp  scheme.hpp  userinfo.hpp
include/uri/percent/: code.hpp  codec.hpp
include/uri/phoenix/: adapted_basic_uri_accessor.hpp
include/uri/uri/: algorithm.hpp  basic_builder.hpp  basic_parser.hpp  ios.hpp
src/uri/: CMakeLists.txt
test/: CMakeLists.txt
test/uri/: CMakeLists.txt  algorithm.test.cpp  key_value_query.test.cpp  parser.test.cpp  parser_test.cpp  percent_codec.test.cpp  percent_codec_test.cpp  uri.test.cpp  uri_codec.test.cpp  uri_codec_test.cpp
test/uri/parsers/: test_parser.hpp
test/uri/parsers/rules/: CMakeLists.txt  make_char_map.hpp
test/uri/parsers/rules/uri/: CMakeLists.txt  character.test.cpp  fragment.test.cpp  host.test.cpp  ip.test.cpp
